--- a/cjvr/templates/cjvr/statistics_graph.html
+++ b/cjvr/templates/cjvr/statistics_graph.html
@@ -6,7 +6,7 @@
     <h1 class="h3 mb-0 text-gray-800">Statistiques et Graphes</h1>
 </div>
 
-<div class="card border-left-info shadow py-2">
+<div class="card border-left-info">
     <div class="card-body">
         <h5 class="card-title text-info">Pourcentages repertorie par aggressions</h5>
         <p class="card-text">
