--- a/cjvr/templates/cjvr/plaintiff_detail.html
+++ b/cjvr/templates/cjvr/plaintiff_detail.html
@@ -14,7 +14,7 @@
             <b>Enregistrer le:</b> {{ plaintiff.register_date }} <br>
         </p>
         <a class="btn btn-outline-info" href="{% url 'add-testimony' 'Plaintiff' plaintiff.id %}" type="button">Ajouter deposition</a>
-        <a class="btn btn-outline-danger" href="{% url 'delete-plaintiff' plaintiff.id %}" type="button">Supprimer</a>
+{#        <a class="btn btn-outline-danger" href="{% url 'delete-plaintiff' plaintiff.id %}" type="button">Supprimer</a>#}
         <a class="btn btn-outline-secondary" href="{% url 'plaintiffs' %}" type="button">Retour</a>
     </div>
 </div>
